refactor step 9 - method reference ->  to Lambda